<resources>
    <string name="app_name">Panic Button</string>
    <string name="home_1">Welcome to</string>
    <string name="home_2">Panic Button App</string>
    <string name="daftar">Daftar</string>
    <string name="daftar_nama">Masukkan Nama Lengkap</string>
    <string name="daftar_telp">Masukkan Nomor Telepon</string>
    <string name="daftar_email">Masukkan Email</string>
    <string name="daftar_persetujuan">Dengan mendaftar, Anda dianggap telah menyetujui syarat dan ketentuan dan kebijakan privasi kami</string>
    <string name="daftar_pertanyaan">Sudah punya akun?</string>
    <string name="daftar_pertanyaan2">Masuk</string>
    <string name="otp">Masukkan OTP</string>
    <string name="otp_konfirmasi">Silakan masukkan 6 digit kode yang telah kami kirimkan melalui nomor telepon +62 xxx-xxxx-7890</string>
    <string name="otp_pertanyaan">Tidak mendapatkan kode?</string>
    <string name="otp_btn">Kirim</string>
    <string name="otp_pertanyaan2">00.10</string>
    <string name="otp2">Mendaftar Berhasil</string>
    <string name="otp2_konfirmasi">Data Anda telah terdaftar dalam aplikasi kami. Silakan masuk menggunakan nama, email, atau nomor HP</string>
    <string name="otp3">Perubahan Tersimpan</string>
    <string name="otp3_konfirmasi">Nomor telepon berhasil diubah. Nomor ini akan digunakan untuk pengiriman notifikasi sistem. Terima kasih</string>
    <string name="otp2_btn">Lanjutkan</string>
    <string name="masuk">Masuk</string>
    <string name="atau">Atau</string>
    <string name="masuk_google">Masuk dengan Google</string>
    <string name="masuk_pertanyaan">Belum punya akun?</string>
    <string name="masuk_pertanyaan2">Daftar</string>
    <string name="welcome">Selamat datang, </string>
    <string name="welcome_name">Vongola Famiglia</string>
    <string name="panic_button">Panic Button</string>
    <string name="informasi">Informasi</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string-array name="info_title">
        <item>Sawada Tsunayoshi</item>
        <item>Gokudera Hayato</item>
        <item>Yamamoto Takeshi</item>
        <item>Bovino Lambo</item>
        <item>Sasagawa Ryohei</item>
        <item>Hibari Kyoya</item>
        <item>Rokudo Mukuro and Dokuro Chrome</item>
    </string-array>
    <string name="info_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna....</string>
    <string name="info_title2">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="info_desc2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="home">Home</string>
    <string name="payment">Payment</string>
    <string name="profile">Profile</string>
    <string name="tanggal">Tanggal</string>
    <string name="detail_info">Detail Informasi</string>
    <string name="no_hp">+62 896745231</string>
    <string name="mail_add">Vongola@trinisette.com</string>
    <string-array name="status">
        <item>Menunggu</item>
        <item>Pending</item>
        <item>Menunggu</item>
        <item>Pending</item>
    </string-array>
    <string name="profile_2">PROFILE</string>
    <string name="data_diri">Data Diri</string>
    <string name="nama">Nama</string>
    <string name="no_seluler">No. Seluler</string>
    <string name="email">Email</string>
    <string name="bantuan">Bantuan</string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>
    <string name="keluar">KELUAR</string>
    <string name="ubah_nama">Ubah Nama</string>
    <string name="nama_baru">Nama Lengkap Baru</string>
    <string name="ubah_seluler">Ubah No. Seluler</string>
    <string name="seluler_baru">No. Seluler Baru</string>
    <string name="ubah_email">Ubah Email</string>
    <string name="email_baru">Email Baru</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="simpan">Simpan</string>
    <string name="logout_title">Logout Account</string>
    <string name="logout_desc">Apakah Anda yakin ingin keluar? Jika ingin masuk kembali, gunakan nama dan email atau nomor seluler Anda</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="ubah_seluler_title">Mengubah No. Seluler</string>
    <string name="ubah_seluler_desc">Apakah Anda yakin ingin mengubah nomor seluler? Pastikan nomor yang Anda masukkan masih aktif</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="tagihan_pembayaran">Tagihan Pembayaran</string>
    <string name="detail_pembayaran">Detail Pembayaran</string>
    <string name="tagihan">Tagihan </string>
    <string name="riwayat_pembayaran">Riwayat Pembayaran</string>
    <string name="kode">KODE</string>
    <string-array name="status2">
        <item>Selesai</item>
        <item>Kadaluwarsa</item>
        <item>Selesai</item>
        <item>Kadaluwarsa</item>
    </string-array>
    <string name="nama_toko">Nama Toko</string>
    <string name="jumlah_dibayar">Jumlah Harus Dibayar : </string>
    <string name="perpanjangan_otomatis"> - Perpanjangan Otomatis</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="bayar_sebelum">Bayar sebelum 14 Oktober 2024</string>
    <string name="pukul">Pukul 13.10</string>
    <string name="kadaluwarsa">Kadaluwarsa</string>
    <string name="address">Jl. Sentyaki Raya No.7, Bulu Lor, Kota Semarang, Jawa Tengah 50179</string>
    <string name="date_hour"> 14 Oktober 2024, 13.10.27</string>
    <string name="date1">14 Oktober 2024</string>
    <string name="date2">13 Oktober 2024</string>
    <string name="hour">13.14</string>
    <string name="price">Rp200.000,00</string>
    <string name="price2">Rp400.000,00</string>
    <string name="price3">Rp205.000,00</string>
    <string name="price4">Rp405.000,00</string>
    <string name="price5">Rp5.000,00</string>
    <string-array name="code">
        <item>VG010TRI</item>
        <item>ARC007NI</item>
        <item>TRI010VG</item>
        <item>NI007ARC</item>
    </string-array>
    <string name="detail_panic">Detail Panic Button</string>
    <string name="tambah_panic">Tambah Panic Button</string>
    <string name="nama_panic">Nama Panic Button</string>
    <string name="tulis_nama_panic">Tuliskan Nama Panic Button</string>
    <string name="alamat">Alamat</string>
    <string name="tulis_alamat">Tuliskan Nama Alamat Lengkap</string>
    <string-array name="kecamatan">
        <item>Kec. Banyumanik</item>
        <item>Kec. Candisari</item>
        <item>Kec. Gajah Mungkur</item>
        <item>Kec. Gayamsari</item>
        <item>Kec. Genuk</item>
        <item>Kec. Gunungpati</item>
        <item>Kec. Mijen</item>
        <item>Kec. Ngaliyan</item>
        <item>Kec. Pedurungan</item>
        <item>Kec. Semarang Barat</item>
        <item>Kec. Semarang Selatan</item>
        <item>Kec. Semarang Tengah</item>
        <item>Kec. Semarang Timur</item>
        <item>Kec. Semarang Utara</item>
        <item>Kec. Tembalang</item>
        <item>Kec. Tugu</item>
    </string-array>
    <string name="pilih_kec">Pilih Kecamatan</string>
    <string-array name="kelurahan">
        <item>Kel. Sekayu</item>
        <item>Kel. Kauman</item>
        <item>Kel. Pandansari</item>
        <item>Kel. Bulu Lor</item>
        <item>Kel. Tanjung Mas</item>
        <item>Kel. Bandarharjo</item>
        <item>Kel. Karangturi</item>
        <item>Kel. Raden Patah</item>
        <item>Kel. Karangsana</item>
        <item>Kel. Lamper Tengah</item>
        <item>Kel. Peterongan</item>
        <item>Kel. Mugassari</item>
        <item>Kel. Penggaron</item>
        <item>Kel. Genuksari</item>
        <item>Kel. Trimulyo</item>
        <item>Kel. Sidomukti</item>
        <item>Kel. Mojopahit</item>
        <item>Kel. Tlogosari Raya</item>
        <item>Kel. Sampangan</item>
        <item>Kel. Merapi</item>
        <item>Kel. Bendungan</item>
        <item>Kel. Jatingaleh</item>
        <item>Kel. Tegalsari</item>
        <item>Kel. Jomblang</item>
        <item>Kel. Pudakpayung</item>
        <item>Kel. Ngesrep</item>
        <item>Kel. Gedawang</item>
        <item>Kel. Gunungpati</item>
        <item>Kel. Jatirejo</item>
        <item>Kel. Mangunsari</item>
        <item>Kel. Karangayu</item>
        <item>Kel. Manyaran</item>
        <item>Kel. Kalibanteng</item>
        <item>Kel. Majapahit</item>
        <item>Kel. Gayamsari</item>
        <item>Kel. Tambakrejo</item>
        <item>Kel. Karanganyar</item>
        <item>Kel. Tugurejo</item>
        <item>Kel. Mangkang Kulon</item>
        <item>Kel. Tembalang</item>
        <item>Kel. Kedungmundu</item>
        <item>Kel. Bulusan</item>
    </string-array>
    <string name="pilih_kel">Pilih Kelurahan</string>
    <string name="nama_jalan">Nama Jalan</string>
    <string name="informasi_panic">Informasi Panic Button</string>
    <string name="waktu_pemasangan">Waktu Pemasangan</string>
    <string name="waktu_maintenance_terakhir">Waktu Maintenance Terakhir</string>
    <string name="waktu_maintenance_berikutnya">Waktu Maintenance Berikutnya</string>
    <string name="paket_panic">Paket Panic Button</string>
    <string name="tambah_sekarang">Tambahkan Sekarang</string>
    <string name="terakhir_diperbarui">Terakhir diperbarui</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="rincian_pembayaran">Rincian Pembayaran</string>
    <string name="menunggu_pembayaran">Menunggu Pembayaran</string>
    <string name="menunggu_pembayaran_desc">Silakan lakukan pembayaran tagihan paling lambat 11 Oktober 2024, 11.10</string>
    <string name="menunggu_pembayaran_desc2">Silakan lakukan pembayaran tagihan paling lambat 13 Oktober 2024, 13.10</string>
    <string name="pembayaran_selesai">Pembayaran Selesai</string>
    <string name="pembayaran_selesai_desc">Terima kasih sudah melakukan pembayaran. Kamu dapat menghubungi bantuan apabila terjadi masalah terkait pembayaran</string>
    <string name="pembayaran_pending">Ups! Pembayaran Anda Pending</string>
    <string name="pembayaran_pending_desc">Pembayaran Anda mengalami status pending. Mohon tunggu informasi lebih lanjut</string>
    <string name="pembayaran_kadaluwarsa">Ups! Tagihan Kedalulwarsa</string>
    <string name="pembayaran_kadaluwarsa_desc">Pembayaran tidak dapat dilakukan. Harap hubungi Layanan Pelanggan kami untuk bantuan lebih lanjut. Terima kasih</string>
    <string name="perpanjangan_paket">Perpanjangan Paket</string>
    <string name="pemasangan_baru">Pemasangan Baru</string>
    <string name="total_dan_detail_tagihan">Total dan Detail Tagihan</string>
    <string name="subtotal_biaya_paket">Subtotal Biaya Paket</string>
    <string name="subtotal_biaya_pemasangan">Subtotal Biaya Pemasangan</string>
    <string name="biaya_administrasi">Biaya Administrasi</string>
    <string name="total_tagihan">Total Tagihan</string>
    <string name="kode_tagihan">Kode Tagihan</string>
    <string name="waktu_tagihan">Waktu Tagihan</string>
    <string name="status_pembayaran">Status Pembayaran</string>
    <string name="pembayaran_otomatis">Pembayaran Otomatis</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="salin">SALIN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="toko_name">
        <item>Toko Vongola</item>
        <item>Toko Arcobaleno</item>
        <item>Toko Millefiore</item>
        <item>Toko Shimon</item>
    </string-array>
</resources>