<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_margin="@dimen/_4ssp"
    app:cardCornerRadius="@dimen/_12ssp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10ssp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/code"
                style="@style/TVBlueBold3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kode" />

            <TextView
                android:id="@+id/renewal"
                style="@style/TVBlackMedium4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_4ssp"
                android:text="@string/perpanjangan_otomatis" />

            <androidx.cardview.widget.CardView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_8ssp"
                app:cardBackgroundColor="@color/G30">
                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_4ssp"
                    style="@style/TVWhiteMedium4"
                    android:text="@string/status2"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <TextView
            android:id="@+id/time"
            style="@style/TVG90Medium2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4ssp"
            android:text="@string/date_hour" />

        <TextView
            android:id="@+id/toko_name"
            style="@style/TVBlackMedium3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8ssp"
            android:text="@string/nama_toko" />

        <TextView
            android:id="@+id/toko_price"
            style="@style/TVBlackBold4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1ssp"
            android:layout_marginTop="@dimen/_12ssp"
            android:layout_marginBottom="@dimen/_4ssp"
            android:background="@color/G30" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/jumlah_bayar"
                style="@style/TVG90Medium2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/_4ssp"
                android:gravity="end"
                android:text="@string/jumlah_dibayar" />

            <TextView
                android:id="@+id/total_price"
                style="@style/TVRedMedium1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price" />
        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1ssp"
            android:layout_marginTop="@dimen/_4ssp"
            android:layout_marginBottom="@dimen/_12ssp"
            android:background="@color/G30" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pay_before_date"
                    style="@style/TVG90Medium3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bayar_sebelum" />

                <TextView
                    android:id="@+id/pay_before_hour"
                    style="@style/TVG90Medium3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pukul" />
            </LinearLayout>

            <TextView
                android:id="@+id/bayar"
                style="@style/TVWhiteMedium3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_4ssp"
                android:background="@drawable/rectangle"
                android:backgroundTint="@color/red"
                android:text="@string/bayar_sekarang" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>