<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragment.ProfileFragment">

    <LinearLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/_16ssp"
        android:paddingTop="@dimen/_16ssp"
        android:paddingBottom="@dimen/_8ssp"
        android:paddingStart="@dimen/_16ssp"
        android:paddingEnd="@dimen/_16ssp"
        android:background="@drawable/half_red_rectangle"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profile"
            style="@style/TVWhiteMedium1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/profile_2"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_profile"
            android:layout_width="@dimen/_70ssp"
            android:layout_height="@dimen/_70ssp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/_8ssp"
            app:shapeAppearance="@style/RoundedImageView"
            android:src="@drawable/vongola" />

        <TextView
            android:id="@+id/name_profile"
            style="@style/TVWhiteMedium3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_name" />

        <TextView
            android:id="@+id/phone_profile"
            style="@style/TVWhiteMedium3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4ssp"
            android:gravity="center"
            android:text="@string/no_hp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/profile_layout"
        android:layout_above="@id/btn_logout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_16ssp"
        android:layout_marginEnd="@dimen/_16ssp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/data_diri"
            style="@style/TVBlackBold4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8ssp"
            android:text="@string/data_diri" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10ssp"
            android:layout_marginBottom="@dimen/_10ssp">

            <TextView
                android:id="@+id/nama"
                style="@style/TVBlackMedium3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/nama" />

            <TextView
                android:id="@+id/edt_nama"
                style="@style/TVG90Medium1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:drawablePadding="@dimen/_8ssp"
                android:text="@string/welcome_name"
                app:drawableEndCompat="@drawable/icon_arrow_right" />
        </RelativeLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1ssp"
            android:background="@color/G30" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10ssp"
            android:layout_marginBottom="@dimen/_10ssp">

            <TextView
                android:id="@+id/no_seluler"
                style="@style/TVBlackMedium3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/no_seluler" />

            <TextView
                android:id="@+id/edt_no_seluler"
                style="@style/TVG90Medium1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:drawablePadding="@dimen/_8ssp"
                android:text="@string/no_hp"
                app:drawableEndCompat="@drawable/icon_arrow_right" />
        </RelativeLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1ssp"
            android:background="@color/G30" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10ssp"
            android:layout_marginBottom="@dimen/_10ssp">

            <TextView
                android:id="@+id/email"
                style="@style/TVBlackMedium3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/email" />

            <TextView
                android:id="@+id/edt_email"
                style="@style/TVG90Medium1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:drawablePadding="@dimen/_8ssp"
                android:text="@string/mail_add"
                app:drawableEndCompat="@drawable/icon_arrow_right" />
        </RelativeLayout>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1ssp"
            android:background="@color/G30" />

        <TextView
            android:id="@+id/bantuan"
            style="@style/TVBlackBold4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20ssp"
            android:text="@string/bantuan" />

        <TextView
            android:id="@+id/kebijakan_privasi"
            style="@style/TVBlackBold4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20ssp"
            android:text="@string/kebijakan_privasi" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_16ssp"
        android:layout_marginTop="@dimen/_16ssp"
        android:layout_marginEnd="@dimen/_16ssp"
        android:layout_marginBottom="@dimen/_16ssp"
        android:elevation="@dimen/_2ssp"
        android:background="@drawable/btn_gradient"
        android:backgroundTint="@color/red"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_8ssp">

        <TextView
            style="@style/TVWhiteMedium2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keluar" />

        <ImageView
            android:layout_width="@dimen/_24ssp"
            android:layout_height="@dimen/_24ssp"
            android:layout_marginStart="@dimen/_8ssp"
            android:src="@drawable/icon_logout" />

    </LinearLayout>
</RelativeLayout>